Update config of babel module example to not convert async functions

--- a/Modules/babel.config.json
+++ b/Modules/babel.config.json
@@ -5,8 +5,10 @@
       {
         "targets": {
           "esmodules": true
-        }
-      }
+		},
+          "modules": "commonjs",
+          "exclude":["transform-async-to-generator"]
+		}
     ]
   ]
 }
